mType/tests/testFiles/typeChecking/error/functionReturnTypeMismatchFloatToBool.mt
function getFloat(): float {
    return 3.14;
}

bool wrongBool = getFloat();  // Should fail